[package]
name = "pinnifed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
itertools = "0.12.1"
log = "0.4.20"
url = "2.5.0"
sfv = "0.9.4"

# base64 and regex are used by legacy signature base logic only
base64 = "0.22.0"
once_cell = "1.19.0"
regex = "1.10.3"